--- a/CPAS/index.html
+++ b/CPAS/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="/static/fpt-icon.ico"/>
-    <title>cpas</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=0.9" />
+    <link rel="shortcut icon" type="image/png" href="/static/fpt-icon.ico" />
+    <title>cpaf</title>
   </head>
   <body>
     <div id="app"></div>
